--- a/erp-quimicos/src/main/webapp/vm/crmreportevisitas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmreportevisitas/startup.vm
@@ -4,22 +4,18 @@
         <title>${title}</title>
 
         #include("${layoutheader}")
-
+        
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-
-
         <script type="text/javascript" src="../../js/implements/crmreportevisitas/index.js" ></script>
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
         #include("${layoutmenu}")
-
-
+        
         <input type="hidden" name="contextpath" value="$url">
         <input type="hidden" name="user" value="$username">
         <input type="hidden" name="iu" value="$iu">
         <input type="hidden" name="emp" value="$empresa">
         <input type="hidden" name="suc" value="$sucursal">
-
 
         <!--  otra parte -->
         <table class="acciones" border="0" >
@@ -33,10 +29,17 @@
                     <div class="repvisitas" >
                         <table id="filtros" border="0" style="background-color:#ffffff;" >
                             <tr>
-                                <td colspan="12">&nbsp;&nbsp;</td>
+                                <td colspan="15">&nbsp;&nbsp;</td>
                             </tr>
                             <tr>
                                 <td >&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                <td width="60">Agente</td>
+                                <td width="220">					
+									<select name="select_agente" style="width:220px;">
+										<option value="0" >[-- Selecionar Agente --]</option>
+									</select>
+								</td>
+                                <td width="20">&nbsp;&nbsp;&nbsp;</td>
                                 <td width="80">Fecha&nbsp;inicial</td>
                                 <td width="100"><INPUT TYPE="text" name="fecha_inicial" style="width:100px;"></td>
                                 <td width="20">&nbsp;&nbsp;&nbsp;</td>
@@ -50,7 +53,7 @@
                                 <td >&nbsp;&nbsp;&nbsp;&nbsp;</td>
                             </tr>
                             <tr>
-                                <td colspan="12">&nbsp;&nbsp;</td>
+                                <td colspan="15">&nbsp;&nbsp;</td>
                             </tr>
 
                         </table>
@@ -59,14 +62,11 @@
             </tr>
             <tr>
                 <td>&nbsp;&nbsp;</td>
-                    <td>
-
-                            <div id="tablaresultadosvisitas">
-                                    <!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
-                            </div>
-
-
-                    </td>
+				<td>
+					<div id="tablaresultadosvisitas">
+						<!--Aqui se agrega desde el js los trs de el reultado de  la consulta-->
+					</div>
+				</td>
             </tr>
         </table>
 
